Fixing stuff i didnt saw in Editor lmao

--- a/GetVRCPath.csproj
+++ b/GetVRCPath.csproj
@@ -5,9 +5,9 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D9647AC2-D913-40CC-804F-AF0BE85CEB5F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>GetVRCPath</RootNamespace>
-    <AssemblyName>GetVRCPath</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>SteamPathGrabber</RootNamespace>
+    <AssemblyName>Steam-Path-Grabber</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,8 +34,9 @@
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup />
+  <PropertyGroup />
   <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -53,7 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="app.manifest" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
